pkg/lang/testdata/ub/constraints/valid/check-at-most-one-of.ub
constraints: [
  { kind: at-most-one-of, fields: [var.a, var.b, var.c] },
]
