pkg/lang/testdata/ub/constraints/invalid/splat-rules.ub
constraints: [
  { kind: at-most-one-of,    fields: [var.replicas[*].primary] },
  { kind: required-together, fields: [var.replicas[*].x, var.volumes[*].y] },
]
